; ModuleID = '/home/carl/AnghaBench/proxychains-ng/src/extr_main.c_set_own_dir.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/src/extr_main.c_set_own_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@own_dir = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @set_own_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_own_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @strlen(i8* %4)
  store i64 %5, i64* %3, align 8
  br label %6

6:                                                ; preds = %19, %1
  %7 = load i64, i64* %3, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %6
  %10 = load i8*, i8** %2, align 8
  %11 = load i64, i64* %3, align 8
  %12 = sub i64 %11, 1
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 47
  br label %17

17:                                               ; preds = %9, %6
  %18 = phi i1 [ false, %6 ], [ %16, %9 ]
  br i1 %18, label %19, label %22

19:                                               ; preds = %17
  %20 = load i64, i64* %3, align 8
  %21 = add i64 %20, -1
  store i64 %21, i64* %3, align 8
  br label %6

22:                                               ; preds = %17
  %23 = load i64, i64* %3, align 8
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i64*, i64** @own_dir, align 8
  %27 = call i32 @memcpy(i64* %26, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i64 2)
  br label %37

28:                                               ; preds = %22
  %29 = load i64*, i64** @own_dir, align 8
  %30 = load i8*, i8** %2, align 8
  %31 = load i64, i64* %3, align 8
  %32 = sub i64 %31, 1
  %33 = call i32 @memcpy(i64* %29, i8* %30, i64 %32)
  %34 = load i64*, i64** @own_dir, align 8
  %35 = load i64, i64* %3, align 8
  %36 = getelementptr inbounds i64, i64* %34, i64 %35
  store i64 0, i64* %36, align 8
  br label %37

37:                                               ; preds = %28, %25
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @memcpy(i64*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
